--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Galaxy Invaders</title>
-  </head>
-  <body>
+    <title>My JavaScript Game</title>
 
+    <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
+    <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"></script>
+
+    <script src="vendor/keymaster.js"></script>
+    <script src="lib/gameView.js"></script>
+    <script src="lib/util.js"></script>
+    <script src="lib/movingObject.js"></script>
+    <script src="lib/ship.js"></script>
+    <script src="lib/game.js"></script>
+
+    <script type="text/javascript">
+      function init(){
+        var stage = new createjs.Stage("gameCanvas");
+        var gameView = new SpaceInvaders.GameView(stage);
+
+        createjs.Ticker.setFPS(40);
+        createjs.Ticker.setInterval(25);
+        createjs.Ticker.addEventListener("tick", function(){
+          stage.removeAllChildren();
+          gameView.game.draw();
+          stage.update();
+        });
+      }
+    </script>
+  </head>
+
+  <body onload="init();">
+    <canvas id="gameCanvas" width="500" height="800"></canvas>
   </body>
+
 </html>
