Added bullets and firing functionality

--- a/index.html
+++ b/index.html
@@ -12,30 +12,17 @@
     <script src="lib/util.js"></script>
     <script src="lib/movingObject.js"></script>
     <script src="lib/ship.js"></script>
+    <script src="lib/bullet.js"></script>
     <script src="lib/game.js"></script>
 
     <script type="text/javascript">
       function init(){
         var canvas = document.getElementById("canvas");
-        // var stage = new createjs.Stage(canvas);
-
         var ctx = canvas.getContext("2d");
         ctx.canvas.width  = 500;
         ctx.canvas.height = 600;
-
         var gameView = new SpaceInvaders.GameView(ctx);
         gameView.start();
-
-        // createjs.Ticker.setFPS(32);
-        // createjs.Ticker.setInterval(1);
-
-        // createjs.Ticker.addEventListener("tick", function(){
-        //   console.log("s");
-        //   gameView.game.draw();
-        //   // stage.removeAllChildren();
-        //   // stage.update();
-        // });
-
       }
     </script>
   </head>
