--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <script src="lib/util.js"></script>
     <script src="lib/movingObject.js"></script>
     <script src="lib/ship.js"></script>
+    <script src="lib/enemyShip.js"></script>
     <script src="lib/bullet.js"></script>
+    <script src="lib/enemyBullet.js"></script>
     <script src="lib/game.js"></script>
 
     <script type="text/javascript">
