--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="lib/enemyShip.js"></script>
     <script src="lib/bullet.js"></script>
     <script src="lib/enemyBullet.js"></script>
+    <script src="lib/wave.js"></script>
     <script src="lib/game.js"></script>
 
     <script type="text/javascript">
