Added explosion graphics and improved gameplay

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="lib/wave.js"></script>
     <script src="lib/game.js"></script>
     <script src="lib/star.js"></script>
+    <script src="lib/explosion.js"></script>
 
     <script type="text/javascript">
       function init(){
