Changed firing sequence of boss, changed web page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My JavaScript Game</title>
+    <title>Space Shooter by Sangam Kaushik</title>
 
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/index.css"></link>
 
@@ -30,7 +30,6 @@
         ctx.canvas.height = 600;
         var gameView = new SpaceInvaders.GameView(ctx);
         gameView.startIntro();
-        // gameView.start();
       }
     </script>
   </head>
