Changed game fonts and added styling to make page more stylistic

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
   </head>
 
   <body onload="init();">
+    <div class="spash-page">
+      <div class="background-container"></div>
+    </div>
     <canvas id="canvas" width="500" height="600"></canvas>
   </body>
 
