Fixed the font download error

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <script src="lib/explosion.js"></script>
 
     <script type="text/javascript">
+    WebFontConfig = {
+      custom: {
+        families: ['ARCADE'],
+        urls: ['/assets/stylesheets/index.css']
+      },
+
       function init(){
         var canvas = document.getElementById("canvas");
         var ctx = canvas.getContext("2d");
