Changed game name to SpaceShooter

--- a/assets/My JavaScript Game.html
+++ b/assets/My JavaScript Game.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0045)http://sangamkaushik.github.io/SpaceInvaders/ -->
+<!-- saved from url=(0045)http://sangamkaushik.github.io/SpaceShooter/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <title>My JavaScript Game</title>
@@ -24,7 +24,7 @@
         var ctx = canvas.getContext("2d");
         ctx.canvas.width  = 500;
         ctx.canvas.height = 600;
-        var gameView = new SpaceInvaders.GameView(ctx);
+        var gameView = new SpaceShooter.GameView(ctx);
         gameView.start();
       }
     </script>
