--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         var ctx = canvas.getContext("2d");
         ctx.canvas.width  = 500;
         ctx.canvas.height = 600;
-        var gameView = new SpaceInvaders.GameView(ctx);
+        var gameView = new SpaceShooter.GameView(ctx);
         gameView.startIntro();
       }
     </script>
