Added contact info on page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Space Shooter by Sangam Kaushik</title>
 
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/index.css"></link>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
     <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"></script>
@@ -38,7 +39,16 @@
     <div class="spash-page">
       <div class="background-container"></div>
     </div>
-    <canvas id="canvas" width="500" height="600"></canvas>
+    <div id="game-container">
+      <canvas id="canvas" width="500" height="600"></canvas>
+      <div class="contact-info">
+        <ul>
+          <li><a href="http://github.com/sangamkaushik" class="icon fa-github fa-md" style="font-family:FontAwesome"> GitHub</a></li>
+          <li><a href="http://linkedin.com/in/sangamkaushik" class="icon fa-linkedin-square fa-md" style="font-family:FontAwesome"> LinkedIn</a></li>
+          <li><a href="http://sangamk.com/docs/resume.pdf" class="icon fa-file fa-md" style="font-family:FontAwesome"> Resume</a></li>
+        </ul>
+      </div>
+    </div>
   </body>
 
 </html>
